--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
             <!-- Machine Learning - Researcher Student Experience -->
             <div class="resume-item">
-              <h4>Machine Learning - Researcher Student</h4>
+              <h4>Machine Learning</h4>
               <h5>November 2021 - July 2022</h5>
               <p><em>DLR (German Aerospace Centre), Berlin, Germany</em></p>
               <ul>
@@ -307,6 +307,10 @@
                   disruptions.</li>
                 <li>Explored and fine-tuned multiple reinforcement learning techniques, optimizing AI models for
                   real-world urban traffic management.</li>
+                <li>Designed and implemented simulation pipelines integrating sensor inputs with control feedback loops to enable real-time behavior adaptation.</li>
+                <li>Evaluated algorithm performance using recorded datasets and custom test cases to ensure robustness and reliability.</li>
+                <li>Contributed to hardware-in-the-loop (HIL) prototype setups and conducted performance testing under dynamic environmental conditions.</li>
+                <li>Authored technical documentation detailing planning/control interfaces and compiled performance reports for internal validation and review.</li>
               </ul>
             </div><!-- End Machine Learning - Researcher Student Item -->
 
