--- a/traffic-control-details.html
+++ b/traffic-control-details.html
@@ -108,6 +108,9 @@
   <li><i class="bi bi-lightbulb"></i> Used TraCI API to control signal states and retrieve live vehicle data</li>
   <li><i class="bi bi-lightbulb"></i> Designed a custom OpenAI Gym-compatible environment with observation, action, and reward logic</li>
   <li><i class="bi bi-lightbulb"></i> Delivered browser-based visualization and live performance metrics via WebSocket streaming</li>
+  <li><i class="bi bi-lightbulb"></i> Integrated a WebSocket-based data pipeline for real-time vehicle state updates and signal control commands.</li>
+  <li><i class="bi bi-lightbulb"></i> Designed an adaptive policy that prioritizes emergency vehicles based on live sensor data and simulation feedback.</li>
+  <li><i class="bi bi-lightbulb"></i> Developed a browser-based dashboard for real-time visualization and control interaction.</li>
 </ul>
 
 
@@ -115,10 +118,12 @@
             
 <h4>Technologies & Tools:</h4>
 <ul>
-  <li><i class="bi bi-window-sidebar"></i> <strong>Frontend:</strong> Plotly.js, Matplotlib (for 2D visual metrics), Three.js (for future 3D)</li>
-  <li><i class="bi bi-code-slash"></i> <strong>Backend:</strong> Python (Flask or FastAPI), WebSocket (Socket.IO), TraCI</li>
+  <li><i class="bi bi-window-sidebar"></i> <strong>Frontend:</strong> HTML, CSS, JavaScript (Canvas/WebGL for simulation view)</li>
+  <li><i class="bi bi-code-slash"></i> <strong>Backend:</strong> Node.js, Express.js, WebSocket, Python (RL models, SUMO integration)</li>
   <li><i class="bi bi-robot"></i> <strong>Machine Learning:</strong> TensorFlow, Keras, OpenAI Gym</li>
   <li><i class="bi bi-traffic-cone"></i> <strong>Simulation:</strong> SUMO (microscopic traffic simulation), SUMO-GUI, TraCI</li>
+  <li><i class="bi bi-cloud-arrow-up"></i> <strong>Database & Caching:</strong> PostgreSQL, Redis</li>
+    <li><i class="bi bi-traffic-cone"></i> <strong>DevOps:</strong> Docker, GitHub Actions</li>
   <li><i class="bi bi-cloud-arrow-up"></i> <strong>Cloud & Training:</strong> AWS EC2, Docker (for training & remote simulation)</li>
 </ul>
 
