--- a/index.html
+++ b/index.html
@@ -171,81 +171,72 @@
 
     </section><!-- /About Section -->
 
-   <!-- Skills Section -->
+  <!-- Skills Section -->
 <section id="skills" class="skills section light-background">
-  <!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
     <h2>Skills</h2>
-  </div><!-- End Section Title -->
+  </div>
 
   <div class="container" data-aos="fade-up" data-aos-delay="100">
-    
-    <p><b>Languages & Frameworks</b></p>
-    <div class="tools-list">
-      <span>• JavaScript</span>
-      <span>• TypeScript</span>
-      <span>• Python</span>
-      <span>• SQL</span>
-    </div>
-    <br>
 
-    <p><b>Frontend Technologies</b></p>
+    <p><b>Languages / Frameworks</b></p>
     <div class="tools-list">
-      <span>• React.js</span>
+      <span>• TypeScript</span>
+      <span>• JavaScript</span>
+      <span>• Node.js</span>
+      <span>• Express</span>
+      <span>• React</span>
       <span>• HTML5</span>
       <span>• CSS3</span>
-      <span>• Tailwind CSS</span>
-      <span>• Vite</span>
-      <span>• Webpack</span>
-    </div>
-    <br>
-
-    <p><b>Backend & API Development</b></p>
-    <div class="tools-list">
-      <span>• Node.js</span>
-      <span>• Express.js</span>
-      <span>• NestJS</span>
-      <span>• REST APIs</span>
     </div>
     <br>
 
     <p><b>Databases</b></p>
     <div class="tools-list">
       <span>• PostgreSQL</span>
-      <span>• SQL Optimization</span>
-      <span>• Redis / Valkey (basic)</span>
-      <span>• Prisma ORM</span>
+      <span>• Prisma (basic)</span>
+      <span>• MongoDB</span>
     </div>
     <br>
 
-    <p><b>DevOps & Cloud</b></p>
+    <p><b>DevOps & Infrastructure</b></p>
     <div class="tools-list">
       <span>• Docker</span>
       <span>• GitHub Actions</span>
-      <span>• GitLab CI</span>
-      <span>• AWS (S3, Lambda, Redshift, Glue)</span>
-      <span>• Kubernetes</span>
-    </div>
-    <br>
-
-    <p><b>Testing & Automation</b></p>
-    <div class="tools-list">
-      <span>• Jest</span>
-      <span>• Playwright</span>
-      <span>• CI/CD Pipelines</span>
-    </div>
-    <br>
-
-    <p><b>Other Tools & Practices</b></p>
-    <div class="tools-list">
-      <span>• Agile / Scrum</span>
       <span>• Git</span>
-      <span>• Technical Documentation</span>
-      <span>• Industrial IoT (Interest)</span>
+      <span>• GitLab CI/CD (familiar)</span>
+      <span>• AWS (basic)</span>
+    </div>
+    <br>
+
+    <p><b>Tools</b></p>
+    <div class="tools-list">
+      <span>• Git</span>
+      <span>• Jira</span>
+      <span>• Agile / Scrum</span>
+    </div>
+    <br>
+
+    <p><b>Other Technical Skills</b></p>
+    <div class="tools-list">
+      <span>• REST APIs</span>
+      <span>• 3rd-party API Integration</span>
+      <span>• Stripe (basic)</span>
+      <span>• LLM API exposure</span>
+    </div>
+    <br>
+
+    <p><b>Soft Skills</b></p>
+    <div class="tools-list">
+      <span>• Product-first mindset</span>
+      <span>• Clear communicator</span>
+      <span>• Proactive contributor</span>
+      <span>• Startup-ready</span>
     </div>
 
   </div>
 </section>
+
 <!-- /Skills Section -->
 
 
