--- a/landscape-analyzer-details.html
+++ b/landscape-analyzer-details.html
@@ -74,38 +74,48 @@
     </div>
 
     <!-- Project Details Section -->
-    <section id="project-details" class="project-details section">
-      <div class="container">
-        <div class="row gy-4">
-          <div class="col-lg-8 offset-lg-2" data-aos="fade-up" data-aos-delay="200">
-            <h3>Landscape Analyzer: Data Transformation from SAP to LeanIX</h3>
-            <p class="fst-italic">
-              In modern enterprises, data transformation is critical for system integration and business process optimization. This project focuses on seamlessly transforming data from SAP to LeanIX to enhance operational insights and improve landscape analysis.
-            </p>
-            <p>The Landscape Analyzer project utilizes advanced data transformation techniques to migrate and structure data from SAP ERP systems into LeanIX, a platform for enterprise architecture management. By structuring and visualizing data effectively, it enables decision-makers to gain deeper insights into their IT landscapes.</p>
-            
-            <h4>Key Objectives:</h4>
-            <ul>
-              <li><i class="bi bi-exclamation-circle"></i> Efficient data transformation from SAP to LeanIX</li>
-              <li><i class="bi bi-exclamation-circle"></i> Visualization of IT landscape for enhanced decision-making</li>
-              <li><i class="bi bi-exclamation-circle"></i> Enabling cross-functional collaboration through shared data insights</li>
-            </ul>
+    <!-- Project Details Section -->
+<section id="project-details" class="project-details section">
+  <div class="container">
+    <div class="row gy-4">
+      <div class="col-lg-8 offset-lg-2" data-aos="fade-up" data-aos-delay="200">
+        <h3>Landscape Analyzer: Data Transformation from SAP to LeanIX</h3>
+        <p class="fst-italic">
+          In modern enterprises, data transformation is critical for system integration and business process optimization.
+          This project focuses on seamlessly transforming data from SAP to LeanIX to enhance operational insights and improve landscape analysis.
+        </p>
+        <p>
+          The Landscape Analyzer project utilizes advanced data transformation techniques to migrate and structure data from SAP ERP systems
+          into LeanIX, a platform for enterprise architecture management. By structuring and visualizing data effectively,
+          it enables decision-makers to gain deeper insights into their IT landscapes.
+        </p>
 
-            <h4>Technology & Methodology:</h4>
-            <ul>
-            <li><strong>Frontend:</strong> Vue.js, TypeScript, HTML5, CSS3</li>
-            <li><strong>Backend:</strong> Python, Django, REST API, GraphQL</li>
-            <li><strong>Cloud:</strong> AWS (S3, Lambda, Glue), Docker, Kubernetes</li>
-            <li><strong>Data Integration:</strong> LeanIX API, ETL pipelines, SQL</li>
-            <li><strong>DevOps & Automation:</strong> Jenkins, GitLab, Terraform</li>
-            
-          </ul>
-            <h4>Impact and Future Potential:</h4>
-            <p>By providing a structured approach to data transformation, this project aids in making well-informed strategic decisions. Future expansions could include integration with additional ERP systems to broaden data scope and further enhance enterprise architecture visualization.</p>
-          </div>
-        </div>
+        <h4>Key Objectives:</h4>
+        <ul>
+          <li><i class="bi bi-exclamation-circle"></i> Efficient data transformation from SAP to LeanIX</li>
+          <li><i class="bi bi-exclamation-circle"></i> Visualization of IT landscape for enhanced decision-making</li>
+          <li><i class="bi bi-exclamation-circle"></i> Enabling cross-functional collaboration through shared data insights</li>
+        </ul>
+
+        <h4>Technology & Methodology:</h4>
+        <ul>
+          <li><strong>Frontend:</strong> React.js, TypeScript, HTML5, CSS3</li>
+          <li><strong>Backend:</strong> Python, Django, REST API, GraphQL</li>
+          <li><strong>Cloud:</strong> AWS (S3, Lambda, Glue), Docker, Kubernetes</li>
+          <li><strong>Data Integration:</strong> LeanIX API, ETL pipelines, SQL, Redis / Valkey</li>
+          <li><strong>DevOps & Automation:</strong> Jenkins, GitLab CI, Terraform</li>
+        </ul>
+
+        <h4>Impact and Future Potential:</h4>
+        <p>
+          By providing a structured approach to data transformation, this project aids in making well-informed strategic decisions.
+          Future expansions could include integration with additional ERP systems to broaden data scope and further enhance enterprise architecture visualization.
+        </p>
       </div>
-    </section>
+    </div>
+  </div>
+</section>
+
   </main>
 
   <!-- Scroll Top -->
