--- a/integration-graph-details.html
+++ b/integration-graph-details.html
@@ -101,8 +101,8 @@
             <h4>Technologies & Tools:</h4>
             <ul>
 <li><strong>Frontend:</strong> Vue 3, TypeScript, HTML5, CSS/SCSS</li>
-<li><strong>Backend:</strong> Django, Python</li>
-<li><strong>API:</strong> GraphQL</li>
+<li><strong>Backend:</strong> Node.js, Django, Python</li>
+<li><strong>API:</strong> GraphQL, Restful API</li>
 <li><strong>Visualization:</strong> D3.js (2D), Three.js (3D), custom interactive tools</li>
 <li><strong>Data Integration:</strong> LeanIX API, ETL pipelines</li>
 </ul>
